k8s/transfer-service.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transfer-service
  namespace: banking
  labels:
    app: transfer-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transfer-service
  template:
    metadata:
      labels:
        app: transfer-service
    spec:
      containers:
        - name: transfer-service
          image: banking-demo/transfer-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8003
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 10
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: transfer-service
  namespace: banking
spec:
  selector:
    app: transfer-service
  ports:
    - port: 8003
      targetPort: 8003
      name: http
